@@ -264,6 +264,16 @@ int igraph_vector_ptr_push_back (igraph_vector_ptr_t* v, void* e) {
 	return 0;
 }
 
+void *igraph_vector_ptr_pop_back (igraph_vector_ptr_t *v) {
+  assert(v != NULL);
+  assert(v->stor_begin != NULL);
+  assert(v->stor_begin != v->end);
+  void *tmp=*(v->end);
+  v->end -= 1;
+  
+  return 0;
+}
+
 /**
  * \ingroup vectorptr
  * \function igraph_vector_ptr_insert
